--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 <body>
 	
-	<h1 class="subtitle">Бро шо це за сижка така?</h1>
+	<h1 class="subtitle">Бляяяя, как же я заебался, хахахах</h1>
+	<h2>Почему у меня никогда не выходит ничего путного? Я мало стараюсь? Или я просто последний, ничего не понимающий идиот... :)</h2>
+	
 </body>
 </html>
